Fix edge case layout breaks

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -8,5 +8,5 @@ $secondary-color: #ff1919;
 $tertiary-color: #ffff00;
 $text-color: #eeeeee;
 $notification-color: #ffc0cb;
-$movie-page-small: 600px;
+$movie-page-small: 650px;
 $navbar-mobile: 476px;
