--- a/src/components/MovieHero/MovieHero.module.scss
+++ b/src/components/MovieHero/MovieHero.module.scss
@@ -7,9 +7,15 @@
   background-color: #000000;
 }
 
+.favorite-button-container {
+  position: absolute;
+  right: 0.5rem;
+  top: 0.5rem;
+}
+
 @media (max-width: v.$movie-page-small) {
   .movie-hero {
-    height: 300px;
+    height: 400px;
     margin-bottom: 0;
   }
 }
